--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,32 @@
     <link rel="manifest" href="/static/site.webmanifest">
     <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#4598e0">
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Веб чат, разработанный специально для секты солнышек!">
     <title>Добро пожаловать в Sunshine!</title>
 </head>
-<body>
+
+<body class="text-center">
+    <div class="container-fluid">
+        <form class="form-signin">
+            <img class="mb-4" src="/static/assets/img/sun.svg" alt="" width="72" height="72">
+            <h1 class="h5 mb-3 font-weight-normal ">Пожалуйста, авторизуйтесь</h1>
+            <label for="inputEmail" class="sr-only">Логин</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
+            <label for="inputPassword" class="sr-only">Пароль</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+            <a href="/registration" class="btn btn-link">Ещё не зарегистрированы?</a>
+            <p class="mt-5 mb-3 text-muted">&copy; Sunshine Project 2020</p>
+        </form>
+    </div>
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
 </body>
+
 </html>
