--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4598e0">
-    <link rel="stylesheet" href="/lib/bootstrap/bootstrap.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
+    <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#4598e0">
+    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
-    <title>Давайте зарегистрируемся!</title>
+    <meta name="description" content="Веб чат, разработанный специально для секты солнышек!">
+    <title>Регистрация</title>
 </head>
-<body>
 
-    <script src="/lib/bootstrap/bootstrap.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/public/js/client.js"></script>
+<body class="text-center">
+    <div class="container-fluid">
+        <form class="form-signin">
+            <img class="mb-4" src="/static/assets/img/sun.svg" alt="" width="72" height="72">
+            <h1 class="h5 mb-3 font-weight-normal ">Давайте создадим аккаунт!</h1>
+            <label for="inputEmail" class="sr-only">Ваше имя</label>
+            <input type="login" id="inputEmail" class="name form-control no-margin no-border-bottom no-border-bottom-radius" placeholder="Например: <%= randomRegDataTemplate.name %>" data-toggle="tooltip" data-placement="left" title="Ваше имя" required autofocus>
+            <label for="inputEmail" class="sr-only">Придумайте логин</label>
+            <input type="login" id="inputEmail" class="login form-control no-margin no-border-bottom-radius no-border-top-radius" placeholder="Например: <%= randomRegDataTemplate.login %>" data-toggle="tooltip" data-placement="left" title="Придумайте логин" required autofocus>
+            <label for="inputPassword" class="sr-only no-margin">Придумайте пароль</label>
+            <input type="password" id="inputPassword" class="form-control no-margin no-border-top no-border-bottom-radius" placeholder="Придумайте пароль" required>
+            <label for="inputPassword" class="sr-only">Повторите пароль</label>
+            <input type="password" id="inputPassword" class="form-control no-border-top" placeholder="Повторите пароль" required>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
+            <a href="/registration" class="btn btn-link">Уже зарегистрированы?</a>
+            <p class="mt-5 mb-3 text-muted">&copy; Sunshine Project 2020</p>
+        </form>
+    </div>
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="/static/assets/js/client.js"></script>
+    <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
 </body>
+
 </html>
