--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,9 @@
             <img class="mb-4" src="/static/assets/img/sun.svg" alt="" width="72" height="72">
             <h1 class="h5 mb-3 font-weight-normal ">Пожалуйста, авторизуйтесь</h1>
             <label for="inputEmail" class="sr-only">Логин</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
+            <input type="text"inputEmail" class="form-control no-border-botoom no-border-bottom-radius" placeholder="Логин" required autofocus>
             <label for="inputPassword" class="sr-only">Пароль</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
+            <input type="password" id="inputPassword" class="form-control no-border-top" placeholder="Пароль" required>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
             <a href="/registration" class="btn btn-link">Ещё не зарегистрированы?</a>
             <p class="mt-5 mb-3 text-muted">&copy; Sunshine Project 2020</p>
