--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -20,23 +20,43 @@
 
 <body class="text-center">
     <div class="container-fluid">
-        <form class="form-signin">
+        <form class="form-signin" method="POST" action="/register_me">
             <img class="mb-4" src="/static/assets/img/sun.svg" alt="" width="72" height="72">
             <h1 class="h5 mb-3 font-weight-normal ">Давайте создадим аккаунт!</h1>
-            <label for="inputEmail" class="sr-only">Ваше имя</label>
-            <input type="login" id="inputEmail" class="name form-control no-margin no-border-bottom no-border-bottom-radius" placeholder="Например: <%= randomRegDataTemplate.name %>" data-toggle="tooltip" data-placement="left" title="Ваше имя" required autofocus>
-            <label for="inputEmail" class="sr-only">Придумайте логин</label>
-            <input type="login" id="inputEmail" class="login form-control no-margin no-border-bottom-radius no-border-top-radius" placeholder="Например: <%= randomRegDataTemplate.login %>" data-toggle="tooltip" data-placement="left" title="Придумайте логин" required autofocus>
-            <label for="inputPassword" class="sr-only no-margin">Придумайте пароль</label>
-            <input type="password" id="inputPassword" class="form-control no-margin no-border-top no-border-bottom-radius" placeholder="Придумайте пароль" required>
-            <label for="inputPassword" class="sr-only">Повторите пароль</label>
-            <input type="password" id="inputPassword" class="form-control no-border-top" placeholder="Повторите пароль" required>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
-            <a href="/registration" class="btn btn-link">Уже зарегистрированы?</a>
+            
+            <input name="name" autocomplete="off" type="text" id="inputEmail name" class="name form-control no-margin no-border-bottom no-border-bottom-radius" placeholder="Например: <%= randomRegDataTemplate.name %>" data-toggle="tooltip" data-placement="left" title="Ваше имя" autofocus>
+            
+            <input name="login" autocomplete="off" type="text" id="inputEmail" class="login form-control no-margin no-border-bottom-radius no-border-top-radius" placeholder="Например: <%= randomRegDataTemplate.login %>" data-toggle="tooltip" data-placement="left" title="Придумайте логин (english)" autofocus>
+            
+            <input name="password" type="password" id="inputPassword" class="form-control no-margin no-border-top no-border-bottom-radius password" placeholder="Придумайте пароль">
+            
+            <input type="password" id="inputPassword" class="form-control no-border-top password-repeat" placeholder="Повторите пароль">
+
+            <button class="btn btn-lg btn-primary btn-block submit" type="submit">Зарегистрироваться</button>
+            <a href="/" class="btn btn-link">Уже зарегистрированы?</a>
             <p class="mt-5 mb-3 text-muted">&copy; Sunshine Project 2020</p>
         </form>
     </div>
     
+    <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ошибка</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">Принять</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
