--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -7,6 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="manifest" href="/static/site.webmanifest">
     <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#4598e0">
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
