added name for password confirmation field

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -30,9 +30,9 @@
             
             <input name="login" autocomplete="off" type="text" id="inputEmail" class="login form-control no-margin no-border-bottom-radius no-border-top-radius" placeholder="Например: <%= randomRegDataTemplate.login %>" data-toggle="tooltip" data-placement="left" title="Придумайте логин (english)" autofocus>
             
-            <input name="password" type="password" id="inputPassword" class="form-control no-margin no-border-top no-border-bottom-radius password" placeholder="Придумайте пароль">
+            <input name="password" name="password" type="password" id="inputPassword" class="form-control no-margin no-border-top no-border-bottom-radius password" placeholder="Придумайте пароль">
             
-            <input type="password" id="inputPassword" class="form-control no-border-top password-repeat" placeholder="Повторите пароль">
+            <input name="re_password" type="password" id="inputPassword" class="form-control no-border-top password-repeat" placeholder="Повторите пароль">
 
             <button class="btn btn-lg btn-primary btn-block submit" type="submit">Зарегистрироваться</button>
             <a href="/" class="btn btn-link">Уже зарегистрированы?</a>
