--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,21 +20,43 @@
 
 <body class="text-center">
     <div class="container-fluid">
-        <form class="form-signin">
+        <form class="form-signin" action="/authenticate_me" method="POST">
             <img class="mb-4" src="/static/assets/img/sun.svg" alt="" width="72" height="72">
             <h1 class="h5 mb-3 font-weight-normal ">Пожалуйста, авторизуйтесь</h1>
-            <label for="inputEmail" class="sr-only">Логин</label>
-            <input type="text"inputEmail" class="form-control no-border-botoom no-border-bottom-radius" placeholder="Логин" required autofocus>
-            <label for="inputPassword" class="sr-only">Пароль</label>
-            <input type="password" id="inputPassword" class="form-control no-border-top" placeholder="Пароль" required>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+    
+            <input autocomplete="off" name="login" type="text"inputEmail" class="form-control no-border-botoom no-border-bottom-radius login" placeholder="Логин" required autofocus>
+
+            <input autocomplete="off" name="password" type="password" id="inputPassword" class="form-control no-border-top password" placeholder="Пароль" required>
+            
+            <button class="btn btn-lg btn-primary btn-block submit" type="submit">Войти</button>
             <a href="/registration" class="btn btn-link">Ещё не зарегистрированы?</a>
             <p class="mt-5 mb-3 text-muted">&copy; Sunshine Project 2020</p>
         </form>
     </div>
     
+    <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ошибка</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">Принять</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="/static/assets/js/auth.js"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
 </body>
 
