--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,23 +1,67 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
-        <link rel="manifest" href="/static/site.webmanifest">
-        <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#f2bc0b">
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-config" content="/static/browserconfig.xml">
-        <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
-        <meta name="theme-color" content="#ffffff">
-        <meta name="description" content="Веб чат, разработанный специально для секты солнышек!">
-        <title>Общий чат</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
+    <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#f2bc0b">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="/static/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/assets/css/chat.css">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Веб чат, разработанный специально для секты солнышек!">
+    <title>Общий чат</title>
+</head>
+
 <body>
-    <%= name %> 
+    <noscript>
+        <h2>Sorry! Your browser doesn't support Javascript</h2>
+    </noscript>
+
+    <div id="chat-page" class="">
+        <div class="chat-container">
+            <div class="chat-header">
+                <h2>SUNSHINE CONFERENCE</h2>
+            </div>
+            <div class="connecting hidden">
+                Connecting...
+            </div>
+            <ul id="messageArea">
+                
+            </ul>
+            <form id="messageForm" name="messageForm">
+                <div class="form-group">
+                    <div class="input-group clearfix">
+                        <input type="text" id="message" placeholder="Напишите что-нибудь..." autocomplete="off"
+                            class="form-control" />
+                        <button type="submit" id="submit" class="primary">
+                            <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <p id="name" style="display: none;"><%= name %></p>
 </body>
+
+</html>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="/static/assets/js/chat.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+</script>
+</body>
+
 </html>
